# Copyright (C) 2006-2014 Free Software Foundation, Inc.
# This Makefile.am is free software; the Free Software Foundation
# gives unlimited permission to copy, distribute and modify it.

include_HEADERS = src/unum.h
SUBDIRS = src tests
#dist_doc_DATA = COPYING README
EXTRA_DIST = doc README INSTALL
