# Copyright (C) 2006-2014 Free Software Foundation, Inc.
# This Makefile.am is free software; the Free Software Foundation
# gives unlimited permission to copy, distribute and modify it.

lib_LIBRARIES = libunum.a

libunum_a_SOURCES = \
conv.c     conv.h      \
gbnd.c     gbnd.h      \
glayer.c   glayer.h    \
gmp_aux.c  gmp_aux.h   \
           gmp_macro.h \
hlayer.c   hlayer.h    \
           mpx.h       \
support.c  support.h   \
ubnd.c     ubnd.h      \
uenv.c     uenv.h      \
ulayer.c   ulayer.h    \
unum.c     unum.h

EXTRA_DIST = unumxx.h
